--- a/src/stories/Buttons.mdx
+++ b/src/stories/Buttons.mdx
@@ -1,1 +1,9 @@
-These are going to be the docs for my buttons.
+import { Canvas, Meta } from '@storybook/addon-docs/blocks';
+
+import * as ButtonStories from './Button.stories';
+
+<Meta title="Atoms/Button/Docs" />
+
+# Button
+
+This is a button...
